sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:5: error: illegal start of simple expression
  while (ecart>0) {
  ^