sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var N = getNombreValeurs()
  var ecart = (N/2)toInt
  while (ecart>0) {
    for (i <- 1 to N-1) {
      v = getValeur(i+ecart)
      j=i
      while(j>0 && !plusPetitQue(j-1,v)) {
        copie(j-1,i+ecart)
        j-=1
      };setValeur(j,v)
      ecart = (ecart/2)toInt
    }
  }
  
}